--- a/home/oampage.html
+++ b/home/oampage.html
@@ -96,7 +96,7 @@
 </script>
 <h1>Welcome to Thames OAM Page</h1>
 <p>This is account related Page.</p>
-<a href="../home/oampage/oamsubpage.html">Go to OAM Subpage</a>
+<a href="../home/oampage/oamsubpage">Go to OAM Subpage</a>
              
        
  
