--- a/home/oampage/oamsubpage.html
+++ b/home/oampage/oamsubpage.html
@@ -96,7 +96,7 @@
 </script>
 <h1>Welcome to OAM Sub Page</h1>
 <p>This is OAM subpage.</p>
-<a href="../../home.html">Go to Home Page</a>
+<a href="../../home">Go to Home Page</a>
              
        
  
