--- a/home/oampage/bills-and-payments.html
+++ b/home/oampage/bills-and-payments.html
@@ -93,10 +93,26 @@
     }
     */
 //myFunctionSelect();
+
+const queryString = window.location.search;
+
+// Step 2: Create a URLSearchParams object
+const urlParams = new URLSearchParams(queryString);
+
+// Step 3: Retrieve parameters
+const userAccountNo = urlParams.get('contactAccountNumber'); // e.g., 'shirt'
+const headerMsg="Welcome "+userAccountNo;
+//const color = urlParams.get('color'); // e.g., 'blue'
+//const newUser = urlParams.get('newuser'); // e.g., ''
 </script>
-<h1>Welcome to OAM Sub Page</h1>
-<p>This is OAM subpage.</p>
-<a href="../../home">Go to Home Page</a>
+
+<h1 id="header1"></h1>
+<script>
+    document.getElementById("header1").innerHTML=headerMsg;
+</script>
+
+<p>This Bills & Payments Page</p>
+<a href="../../home.html">Go to Home Page</a>
              
        
  
