--- a/home.html
+++ b/home.html
@@ -96,7 +96,7 @@
 </script>
 <h1>Welcome to Thames Home Page</h1>
 <p>This is the Revenue Home Page.</p>
-<a href="./home/oampage">Go to OAM Page</a>
+<a href="./home/my-account">Go to My Account Page</a>
              
        
  
