--- a/home/my-account/bills-and-payments.html
+++ b/home/my-account/bills-and-payments.html
@@ -112,7 +112,7 @@ const headerMsg="Welcome "+userAccountNo;
 </script>
 
 <p>This Bills & Payments Page</p>
-<a href="../../home.html">Go to Home Page</a>
+<a href="../my-account">Go to My Account Page</a>
              
        
  
